--- a/StationDemoWeb/pom.xml
+++ b/StationDemoWeb/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>StationDemoWeb</artifactId>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 	<parent>
 		<groupId>com.exakaconsulting.poc</groupId>
 		<artifactId>StationDemoProject</artifactId>
@@ -19,6 +19,11 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
 		 </dependency>
+		 <dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+		 </dependency>
+		 
 		
 	</dependencies>
 
