--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,13 @@
 			<artifactId>spring-web</artifactId>
 			<version>${spring.version}</version>
 		 </dependency>
-		
+		  <dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>${spring.version}</version>
+		 </dependency>
+
+		 
 		</dependencies>
 	</dependencyManagement>
 
