--- a/StationDemoWeb/pom.xml
+++ b/StationDemoWeb/pom.xml
@@ -22,8 +22,24 @@
 		 <dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
-		 </dependency>
-		 
+		 </dependency>	 
+		
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+		</dependency>
+		
+		
+		
 		
 	</dependencies>
 
