--- a/StationDemoWeb/pom.xml
+++ b/StationDemoWeb/pom.xml
@@ -28,6 +28,11 @@
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger-ui</artifactId>
 		</dependency>
+	    <dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+		</dependency>
+		
 		
 		<dependency>
 			<groupId>org.slf4j</groupId>
