--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,11 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>${springfox.swagger.version}</version>
 		</dependency>
+	    <dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>${springfox.swagger.version}</version>
+		</dependency>
 		
 		<dependency>
 			<groupId>org.slf4j</groupId>
