--- a/StationDemoWeb/pom.xml
+++ b/StationDemoWeb/pom.xml
@@ -21,6 +21,11 @@
 		 </dependency>
 		 <dependency>
 			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+		 </dependency>
+		 
+		 <dependency>
+			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
 		 </dependency>	 
 		
@@ -42,6 +47,16 @@
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+		</dependency>
+		
 		
 		
 		
