--- a/StationDemoWeb/src/main/webapp/WEB-INF/web.xml
+++ b/StationDemoWeb/src/main/webapp/WEB-INF/web.xml
@@ -19,10 +19,14 @@
       		<param-name>contextConfigLocation</param-name>
       		<param-value>com.exakaconsulting.poc.Application</param-value>
   		</context-param>
+  		
+  		<listener>
+      	  <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+  		</listener>
          
          
          <servlet>
-    		<servlet-name>appServlet</servlet-name>
+    		<servlet-name>dispatcher</servlet-name>
     		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
     		<init-param>
         		<param-name>contextClass</param-name>
@@ -37,5 +41,10 @@
         		</param-value>
    			 </init-param>
 		</servlet>
+		
+		<servlet-mapping>
+     	 <servlet-name>dispatcher</servlet-name>
+      	  <url-pattern>/*</url-pattern>
+  	   </servlet-mapping>
          
 </web-app>
