--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	   <springfox.swagger.version>2.8.0</springfox.swagger.version>
 	   <slf4j.version>1.7.25</slf4j.version>
 	   <log4j.version>1.2.17</log4j.version>
+	   <jackson.version>2.9.4</jackson.version>
 	</properties>
 	
 	
@@ -20,6 +21,11 @@
 		  <dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
+			<version>${spring.version}</version>
+		 </dependency>
+		 <dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
 			<version>${spring.version}</version>
 		 </dependency>
 		  <dependency>
@@ -49,7 +55,24 @@
 			<artifactId>log4j</artifactId>
 			<version>${log4j.version}</version>
 		</dependency>
-
+		
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>${log4j.version}</version>
+		</dependency>
+		
+		<!-- Jackson -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
 
 		 
 		</dependencies>
