--- a/StationDemoWeb/pom.xml
+++ b/StationDemoWeb/pom.xml
@@ -60,7 +60,12 @@
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-annotations</artifactId>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+		</dependency>
+
 		
 		
 		
