--- a/StationDemoBatch/pom.xml
+++ b/StationDemoBatch/pom.xml
@@ -14,6 +14,12 @@
 	</properties>
 
 	<dependencies>
+	
+		<dependency>
+			<groupId>org.springframework.batch</groupId>
+			<artifactId>spring-batch-core</artifactId>
+		</dependency>
+	
 	  
 				
 	</dependencies>
