--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 	   <log4j.version>1.2.17</log4j.version>
 	   <jackson.version>2.9.4</jackson.version>
 	   <servletapi.version>3.1.0</servletapi.version>
+	   <springbatch.version>4.0.1.RELEASE</springbatch.version>
 	</properties>
 	
 	
@@ -82,6 +83,13 @@
 			<artifactId>javax.servlet-api</artifactId>
 			<version>${servletapi.version}</version>
 			<scope>provided</scope>
+		</dependency>
+		
+		<!-- Batch -->
+		<dependency>
+			<groupId>org.springframework.batch</groupId>
+			<artifactId>spring-batch-core</artifactId>
+			<version>${springbatch.version}</version>
 		</dependency>
 
 		 
