--- a/StationDemoService/pom.xml
+++ b/StationDemoService/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>StationDemoBatch</artifactId>
+	<artifactId>StationDemoService</artifactId>
 	<packaging>jar</packaging>
 	<parent>
 		<groupId>com.exakaconsulting.poc</groupId>
@@ -16,16 +16,14 @@
 	<dependencies>
 	
 		<dependency>
-			<groupId>org.springframework.batch</groupId>
-			<artifactId>spring-batch-core</artifactId>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
 		</dependency>
-		
-		<!--  Service -->
-		<dependency>
-			<groupId>com.exakaconsulting.poc</groupId>
-			<artifactId>StationDemoService</artifactId>
-			<version>${project.version}</version>
-		</dependency>
+
+		  <dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+		 </dependency>
 		
 	
 	  
