--- a/StationDemoBatch/pom.xml
+++ b/StationDemoBatch/pom.xml
@@ -20,6 +20,31 @@
 			<artifactId>spring-batch-core</artifactId>
 		</dependency>
 		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-aop</artifactId>
+		 </dependency>				
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-beans</artifactId>
+		 </dependency>		
+		 <dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+		 </dependency>		 
+		 
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+		</dependency>
+		
+		
 		<!--  Service -->
 		<dependency>
 			<groupId>com.exakaconsulting.poc</groupId>
