--- a/StationDemoService/pom.xml
+++ b/StationDemoService/pom.xml
@@ -24,6 +24,11 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
 		 </dependency>
+		 <dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+		 </dependency>
+		 
 		
 	
 	  
