--- a/StationDemoBatch/pom.xml
+++ b/StationDemoBatch/pom.xml
@@ -31,13 +31,24 @@
 		 <dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
-		 </dependency>		 
+		 </dependency>		
+		 <dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-tx</artifactId>
+		 </dependency>		 		 
+		  
 		 
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+		</dependency>
+		
 		
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -50,6 +61,27 @@
 			<groupId>com.exakaconsulting.poc</groupId>
 			<artifactId>StationDemoService</artifactId>
 			<version>${project.version}</version>
+		</dependency>
+		
+		<!--  Logger -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+		</dependency>
+		
+		
+		<!--  H2 -->
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
 		</dependency>
 		
 	
