--- a/StationDemoService/pom.xml
+++ b/StationDemoService/pom.xml
@@ -29,6 +29,10 @@
 			<artifactId>spring-jdbc</artifactId>
 		 </dependency>
 		 
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+		</dependency>
 		
 	
 	  
