--- a/StationDemoWeb/pom.xml
+++ b/StationDemoWeb/pom.xml
@@ -75,6 +75,17 @@
 			<version>${project.version}</version>
 		</dependency>
 		
+		<!--  Test -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+		 </dependency>				
+		
 		
 		
 		
