--- a/StationDemoWeb/pom.xml
+++ b/StationDemoWeb/pom.xml
@@ -86,6 +86,12 @@
 			<artifactId>spring-test</artifactId>
 		 </dependency>				
 		
+		<!--  H2 -->
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+		</dependency>
+		
 		
 		
 		
