--- a/StationDemoWeb/pom.xml
+++ b/StationDemoWeb/pom.xml
@@ -93,7 +93,29 @@
 			<scope>test</scope>
 		</dependency>
 		
+		<!--  Test -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+		 </dependency>	
+		 
+		 <!-- Security -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<scope>test</scope>
+		</dependency>
 		
+		 
 		
 		
 	</dependencies>
