--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 	   <springboot.version>2.0.0.RELEASE</springboot.version>
 	   <h2database.version>1.4.196</h2database.version>
 	   <junit.version>4.12</junit.version>
+	   <springsecurity.version>5.0.3.RELEASE</springsecurity.version>
 	</properties>
 	
 	
@@ -194,7 +195,20 @@
 			<scope>test</scope>
 		 </dependency>				
 
+		<!-- Security -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+			<version>${springsecurity.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<version>${springsecurity.version}</version>
+			<scope>test</scope>
+		</dependency>
 
+		 
 
 
 		 
