--- a/StationDemoWeb/pom.xml
+++ b/StationDemoWeb/pom.xml
@@ -121,6 +121,7 @@
 	</dependencies>
 
 	<build>
+	  <finalName>StationDemoWeb</finalName>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
