KAR003 : Add spring security

--- a/pom.xml
+++ b/pom.xml
@@ -198,6 +198,11 @@
 		<!-- Security -->
 		<dependency>
 			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>${springsecurity.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-core</artifactId>
 			<version>${springsecurity.version}</version>
 		</dependency>
