--- a/StationDemoWeb/pom.xml
+++ b/StationDemoWeb/pom.xml
@@ -105,6 +105,10 @@
 		 </dependency>	
 		 
 		 <!-- Security -->
+		 <dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+		</dependency>		 
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-core</artifactId>
