--- a/StationDemoWeb/pom.xml
+++ b/StationDemoWeb/pom.xml
@@ -118,8 +118,10 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
-		 
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+		</dependency> 
 		
 		
 	</dependencies>
