--- a/pom.xml
+++ b/pom.xml
@@ -212,6 +212,11 @@
 			<version>${springsecurity.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>${springsecurity.version}</version>
+		</dependency>
 
 		 
 
