KAR008 : Try to integrate angular

--- a/pom.xml
+++ b/pom.xml
@@ -229,6 +229,7 @@
 		<module>StationDemoService</module>
 		<module>StationDemoWeb</module>
 		<module>StationDemoBatch</module>
+		<module>StationDemoClient/station-angular4-poc</module>
 	</modules>
 
 
