--- a/StationDemoWeb/pom.xml
+++ b/StationDemoWeb/pom.xml
@@ -122,6 +122,10 @@
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-web</artifactId>
 		</dependency> 
+		<dependency>
+       		 	<groupId>org.hibernate</groupId>
+       			<artifactId>hibernate-validator</artifactId>
+    		</dependency>
 		
 		
 	</dependencies>
