--- a/StationDemoWeb/src/main/webapp/WEB-INF/web.xml
+++ b/StationDemoWeb/src/main/webapp/WEB-INF/web.xml
@@ -42,9 +42,30 @@
    			 </init-param>
 		</servlet>
 		
+		
+		
+
+   	   <filter>
+       	  <filter-name>springSecurityFilterChain</filter-name>
+       	 <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+       </filter>
+   
+
+
+
+
+
+   	
+		
 		<servlet-mapping>
      	 <servlet-name>dispatcher</servlet-name>
       	  <url-pattern>/*</url-pattern>
   	   </servlet-mapping>
+  	   
+  	    <filter-mapping>
+        	<filter-name>springSecurityFilterChain</filter-name>
+        	<url-pattern>/*</url-pattern>
+    	</filter-mapping>
+
          
 </web-app>
