KAR019 : Security not working

--- a/StationDemoWeb/pom.xml
+++ b/StationDemoWeb/pom.xml
@@ -106,9 +106,11 @@
 
 		<!-- JWT -->		 
 		<dependency>
-			<groupId>com.okta.jwt</groupId>
-			<artifactId>okta-jwt-verifier</artifactId>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
 		</dependency>
+
+
 
 		 
 		 <!-- Security -->
