--- a/pom.xml
+++ b/pom.xml
@@ -245,6 +245,7 @@
 		<module>StationDemoWeb</module>
 		<module>StationDemoBatch</module>
 		<module>StationDemoClient/station-angular4-poc</module>
+		<module>StationDemoClient/station-vuejs2-poc</module>
 	</modules>
 
 
