--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,17 @@
 	   <java-jwt.version>3.3.0</java-jwt.version>
 	</properties>
 	
+	<distributionManagement>
+       <repository>
+			<id>exaka-releases</id>
+			<url>http://54.38.186.137:8081/nexus/content/repositories/releases/</url>
+	   </repository>
+	   <snapshotRepository>
+			<id>exaka-snapshots</id>
+			<url>http://54.38.186.137:8081/nexus/content/repositories/snapshots/</url>
+	   </snapshotRepository>
+	</distributionManagement>
+	
 	
 	<dependencyManagement>
 		<dependencies>
