KAR037 : Manage user by authorization server

--- a/StationDemoWeb/src/main/resources/config.properties
+++ b/StationDemoWeb/src/main/resources/config.properties
@@ -1,2 +1,2 @@
-okta.issuerUrl=https://dev-884254.oktapreview.com
+okta.issuerUrl=https://dev-884254.oktapreview.com/oauth2/default
 okta.clientId=0oaeg3yghaL9mQalz0h7
