--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 	   <hibernate-validator.version>6.0.8.Final</hibernate-validator.version>
 	   <springjwt.version>1.0.9.RELEASE</springjwt.version>
 	   <java-jwt.version>3.3.0</java-jwt.version>
+	   <okta-jwt.version>0.3.0</okta-jwt.version>
 	</properties>
 	
 	<distributionManagement>
@@ -239,10 +240,16 @@
        		<version>${hibernate-validator.version}</version>
     	</dependency>
 
+		<!-- JWT   -->
 		<dependency>
 			<groupId>com.auth0</groupId>
 			<artifactId>java-jwt</artifactId>
 			<version>${java-jwt.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.okta.jwt</groupId>
+			<artifactId>okta-jwt-verifier</artifactId>
+			<version>${okta-jwt.version}</version>
 		</dependency>
 
 			
