--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 	   <springjwt.version>1.0.9.RELEASE</springjwt.version>
 	   <java-jwt.version>3.3.0</java-jwt.version>
 	   <okta-jwt.version>0.3.0</okta-jwt.version>
+	   <sonar.exclusions>**/*Exception, **/*Application*.java, **/*Filter.java, **/*Configuration.java, **/*Bean.java, **/Constant*.java, **/*Holder.java  </sonar.exclusions>
 	</properties>
 	
 	<distributionManagement>
