--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,10 @@
 	   <springjwt.version>1.0.9.RELEASE</springjwt.version>
 	   <java-jwt.version>3.3.0</java-jwt.version>
 	   <okta-jwt.version>0.3.0</okta-jwt.version>
-	   <sonar.exclusions>**/*Exception, **/*Application*.java, **/*Filter.java, **/*Configuration.java, **/*Bean.java, **/Constant*.java, **/*Holder.java  </sonar.exclusions>
-	</properties>
+	   <sonar.exclusions>**/*Exception, **/*Application*.java, **/*Filter.java, **/*Configuration.java, **/*Bean.java, **/Constant*.java, **/*Holder.java, **/*Provider.java  </sonar.exclusions>
+	   <sonar.inclusions>**/*Service*.java, **/*Dao*.java, **/*Controller*.java</sonar.inclusions>
+
+	   </properties>
 	
 	<distributionManagement>
        <repository>
