--- a/StationDemoService/pom.xml
+++ b/StationDemoService/pom.xml
@@ -51,7 +51,15 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
-		 </dependency>				
+		 </dependency>
+		 <dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<scope>test</scope>
+		</dependency>		 
+		 
+		
+		 			
 		
 		<!--  H2 -->
 		<dependency>
