--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,30 @@
 			  </exclusion>
 			 </exclusions>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.batch</groupId>
+			<artifactId>spring-batch-test</artifactId>
+			<scope>test</scope>
+			<version>${springbatch.version}</version>
+			<exclusions>
+			  <exclusion>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-beans</artifactId>
+			  </exclusion>
+			  <exclusion>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-aop</artifactId>
+			  </exclusion>
+			  <exclusion>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-core</artifactId>
+			  </exclusion>
+			  <exclusion>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-tx</artifactId>
+			  </exclusion>
+			 </exclusions>
+		</dependency>
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -190,6 +214,23 @@
 			  </exclusion>
 		    </exclusions>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-test</artifactId>
+			<scope>test</scope>
+			<version>${springboot.version}</version>
+			<exclusions>
+			  <exclusion>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-beans</artifactId>
+			  </exclusion>
+			  <exclusion>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-core</artifactId>
+			  </exclusion>
+		    </exclusions>
+		</dependency>
+
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
