Correction error mysql

--- a/docker_station/docker-compose.yml
+++ b/docker_station/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     volumes:
       - ./database_station/init:/docker-entrypoint-initdb.d
       - ./database_station/logs:/var/log/mysql
+      - ./database_station/data:/var/lib/mysql
       - ./database_station/conf/test.cnf:/etc/mysql/mysql.conf.d/test.cnf
       
   station_back:
