--- a/docker_station/tomcat_back/Dockerfile
+++ b/docker_station/tomcat_back/Dockerfile
@@ -2,5 +2,10 @@ FROM tomcat:latest
 
 MAINTAINER Karim GZ "kagzouli@exaka.com"
 
-COPY lib/mysql-connector-java-8.0.15.jar /usr/local/tomcat/lib/mysql-connector-java-8.0.15.jar
-COPY conf/context.xml /usr/local/tomcat/conf/context.xml
+ADD lib/mysql-connector-java-8.0.18.jar /usr/local/tomcat/lib/mysql-connector-java-8.0.18.jar
+ADD conf/context.xml /usr/local/tomcat/conf/context.xml
+ADD conf/web.xml /usr/local/tomcat/conf/web.xml
+
+ADD bin/setenv.sh /usr/local/tomcat/bin/setenv.sh
+
+ADD webapps/StationDemoSecureWeb.war /usr/local/tomcat/webapps/StationDemoSecureWeb.war
