--- a/StationDemoWeb/pom.xml
+++ b/StationDemoWeb/pom.xml
@@ -11,6 +11,8 @@
 	</parent>
 
 	<properties>
+		<swagger-maven-plugin-version>3.1.7</swagger-maven-plugin-version>
+		<swagger.host>localhost</swagger.host>
 	</properties>
 
 	<dependencies>
@@ -138,6 +140,44 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<groupId>org.apache.maven.plugins</groupId>
 			</plugin>
+			
+			<plugin>
+				<groupId>com.github.kongchen</groupId>
+				<artifactId>swagger-maven-plugin</artifactId>
+				<version>${swagger-maven-plugin-version}</version>
+				<configuration>
+					<apiSources>
+						<apiSource>
+							<springmvc>true</springmvc>
+							<host>${swagger.host}</host>
+							<locations>
+								<location>com.exakaconsulting.poc</location>
+							</locations>
+							<basePath>/StationDemoSecureWeb</basePath>
+							<info>
+								<title>POCMetierExaka</title>
+								<version>${project.version}</version>
+								<description>POC metier exaka consulting</description>
+								<contact>
+									<email>exaka@exaka.com</email>
+									<name>Exaka consulting</name>
+								</contact>
+							</info>
+							<swaggerDirectory>${basedir}/target/swagger</swaggerDirectory>
+							<outputFormats>json</outputFormats>
+						</apiSource>
+					</apiSources>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>compile</phase>
+						<goals>
+							<goal>generate</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
 		</plugins>
 	</build>
 
