--- a/docker_station/draftkubernates/frontService.yaml
+++ b/docker_station/draftkubernates/frontService.yaml
@@ -7,6 +7,8 @@ metadata:
 spec:
   ports:
   - port: 14000
+    targetPort: 8080
     protocol: TCP
   selector:
     run: stationfrontpod
+  type: LoadBalancer
