--- a/docker_station/draftkubernates/frontDeploy.yaml
+++ b/docker_station/draftkubernates/frontDeploy.yaml
@@ -1,7 +1,8 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: stationfront-deployment
+  name: stationfront
+  namespace: default
 spec:
   # A deployment's specification really only 
   # has a few useful options
@@ -13,7 +14,7 @@ spec:
   selector:
     # This must match the labels we set on the pod!
     matchLabels:
-      app:  stationfrontpod
+      app:  stationfront
   
   # This template field is a regular pod configuration 
   # nested inside the deployment spec
@@ -22,7 +23,7 @@ spec:
       # Set labels on the pod.
       # This is used in the deployment selector.
       labels:
-        app: stationfrontpod
+        app: stationfront
     spec:
       volumes:
       - name: logstationfrontnginx 
@@ -30,13 +31,19 @@ spec:
       - name: logstationfronttomcat
         emptyDir: {}
       containers:
-        - name: tomcat-front-nginx
+        - name: stationfront-nginx
           image: kagzouli/station-front-nginx:1.0.0
           volumeMounts:
           - name: logstationfrontnginx  
             mountPath: /var/log/nginx/
-        - name: tomcat-front-tomcat
+          ports:
+          - containerPort: 80
+            protocol: TCP
+        - name: stationfront-tomcat
           image: kagzouli/station-front-tomcat:1.0.0
           volumeMounts:
           - name: logstationfronttomcat 
             mountPath: /usr/local/tomcat/logs 
+          ports:
+          - containerPort: 8080
+            protocol: TCP
