--- a/docker_station/draftkubernates/frontDeploy.yaml
+++ b/docker_station/draftkubernates/frontDeploy.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: stationfront
+  name: stationfront-deploy
   namespace: default
 spec:
   # A deployment's specification really only 
