--- a/docker_station/draftkubernates/frontService.yaml
+++ b/docker_station/draftkubernates/frontService.yaml
@@ -2,8 +2,6 @@ apiVersion: v1
 kind: Service
 metadata:
   name: stationfrontservice 
-  labels:
-    run: stationfront 
 spec:
   ports:
   - port: 8080 
@@ -11,7 +9,7 @@ spec:
     targetPort: 8080 
     protocol: TCP
   selector:
-    run: stationfront
+    app: stationfront
   type: LoadBalancer
   externalIPs:
   - 51.254.36.120
