--- a/StationDemoWeb/docker/Dockerfile
+++ b/StationDemoWeb/docker/Dockerfile
@@ -10,4 +10,4 @@ RUN cp mariadb-java-client-2.5.2.jar /usr/local/tomcat/lib/mariadb-java-client-2
 
 ADD bin/setenv.sh /usr/local/tomcat/bin/setenv.sh
 
-ADD webapps/StationDemoSecureWeb.war /usr/local/tomcat/webapps/StationDemoSecureWeb.war
+ADD ../target/StationDemoSecureWeb.war /usr/local/tomcat/webapps/StationDemoSecureWeb.war
