--- a/jenkins/deployWithDockerCompose/Jenkinsfile
+++ b/jenkins/deployWithDockerCompose/Jenkinsfile
@@ -17,12 +17,9 @@ pipeline {
             }
         }
 
-        stage ("PullFromRegistry") {
+        stage ("PullFromRegistry2") {
             steps {
-                sh "docker pull ${REPO_NEXUS_URL}kagzouli/station-db:${VERSION}"
-                sh "docker pull ${REPO_NEXUS_URL}kagzouli/station-back:${VERSION}"
-                sh "docker pull ${REPO_NEXUS_URL}kagzouli/station-front-nginx:${VERSION}"
-                sh "docker pull ${REPO_NEXUS_URL}kagzouli/station-front-tomcat:${VERSION}"
+                sh "ls -lrt"
             }
         }
 
