--- a/jenkins/deployWithDockerCompose/Jenkinsfile
+++ b/jenkins/deployWithDockerCompose/Jenkinsfile
@@ -29,6 +29,7 @@ pipeline {
 
         stage ("LaunchDockerCompose") {
             steps {
+		sh "ls -lrt"
                 sh "cd jenkins/deployWithDockerCompose"
 		sh "ls -lrt"
                 sh "docker-compose up -d"
