--- a/jenkins/deployWithDockerCompose/Jenkinsfile
+++ b/jenkins/deployWithDockerCompose/Jenkinsfile
@@ -30,10 +30,7 @@ pipeline {
         stage ("LaunchDockerCompose") {
             steps {
 		sh "ls -lrt"
-                sh "cd jenkins/deployWithDockerCompose"
-		sh "ls -lrt"
-                sh "docker-compose up -d"
-		sh "cd ../.."
+                sh "cd jenkins/deployWithDockerCompose;ls -lrt;docker-compose up -d"
             }
         }
 
