--- a/jenkins/deployWithDockerCompose/docker-compose.yml
+++ b/jenkins/deployWithDockerCompose/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.2'
 
 services:
   station_db:
-    image: "station-db:${VERSION}"
+    image: "${REPO_NEXUS_URL}kagzouli/station-db:${VERSION}"
     deploy:
       replicas: 1 
       restart_policy:
@@ -22,7 +22,7 @@ services:
   station_back:
     depends_on:
       - station_db
-    image: "station-back:${VERSION}"
+    image: "${REPO_NEXUS_URL}kagzouli/station-back:${VERSION}"
     deploy:
       replicas: 1
       restart_policy:
@@ -38,7 +38,7 @@ services:
       - logstationback:/usr/local/tomcat/logs
  
   station_front_tomcat:
-    image: "station-front-tomcat:${VERSION}"
+    image: "${REPO_NEXUS_URL}kagzouli/station-front-tomcat:${VERSION}"
     deploy:
       replicas: 1
       restart_policy:
@@ -52,7 +52,7 @@ services:
       - logstationtomcatfront:/usr/local/tomcat/logs
 
   station_front_nginx:
-    image: "station-front-nginx:${VERSION}"
+    image: "${REPO_NEXUS_URL}kagzouli/station-front-nginx:${VERSION}"
     deploy:
       replicas: 1
       restart_policy:
